--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.4.7",
     "next": "^14.1.0",
     "next-themes": "^0.4.4",
